--- a/docs/04_python/0117/01_02_제어문.ipynb
+++ b/docs/04_python/0117/01_02_제어문.ipynb
@@ -2053,7 +2053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2067,7 +2067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.9"
   },
   "toc": {
    "base_numbering": 1,
